fix: tooltip x offcanvas z-index

--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -1212,8 +1212,8 @@ $zindex-offcanvas-backdrop: 1040 !default;
 $zindex-offcanvas: 1045 !default;
 $zindex-modal-backdrop: 3040;
 $zindex-modal: 3050;
-$zindex-popover: 1010;
-$zindex-tooltip: 1010;
+$zindex-popover: 1050;
+$zindex-tooltip: 1050;
 $zindex-toast: 1070;
 // scss-docs-end zindex-stack
 
